--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,64 @@
-h1 {
-  color: white;
-  background-color: black;
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  background: #9bd0ff;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+input {
+  border-radius: 15px;
+  width: 20rem;
+  height: 2rem;
+  text-align: center;
+}
+.display {
+  box-shadow: 0px 0px 10px #a7a7f0;
+  background-color: aliceblue;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  margin: 1rem;
+  padding: 2rem 1rem;
+}
+.location {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.city,
+.temperature {
+  font-size: 3rem;
+}
+.main {
+  display: flex;
+  align-items: center;
+}
+img {
+  width: 200px;
+}
+.right {
+  margin: 2rem 0.5rem;
+  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
 }
