--- a/src/styles.css
+++ b/src/styles.css
@@ -1,123 +1,115 @@
 * {
   margin: 0;
   padding: 0;
-  outline: 0;
-  text-decoration: none;
+  border: 0;
+  outline: none;
   box-sizing: border-box;
 }
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
-  width: 100vw;
-  margin: 0;
-  background: #9bd0ff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(135deg, rgb(1, 1, 1), rgb(49, 49, 49));
 }
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
+  position: relative;
+  width: 400px;
+  height: 605px;
+  background: #fff;
+  backdrop-filter: blur(10px);
+  padding: 28px 32px;
+  overflow: hidden;
+  border-radius: 18px;
+  font-family: 'Roboto', sans-serif;
+  transition: 0.6s ease-out;
 }
 form {
+  width: 100%;
+  height: min-content;
   display: flex;
-  flex-direction: column;
-  text-align: center;
   align-items: center;
-  gap: 1rem;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+#search i {
+  position: absolute;
+  color: #06283d;
+  font-size: 28px;
+}
+input {
+  background: none;
+  color: #06283d;
+  width: 80%;
+  font-size: 18px;
+  font-weight: 500;
+  padding-left: 32px;
 }
 button {
-  align-items: center;
-  background-color: #0a66c2;
-  border: 0;
-  border-radius: 100px;
-  box-sizing: border-box;
-  color: #ffffff;
   cursor: pointer;
-  display: inline-flex;
-  font-family: -apple-system, system-ui, system-ui, 'Segoe UI', Roboto,
-    'Helvetica Neue', 'Fira Sans', Ubuntu, Oxygen, 'Oxygen Sans', Cantarell,
-    'Droid Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-    'Lucida Grande', Helvetica, Arial, sans-serif;
+  width: 50px;
+  height: 50px;
+  color: #06283d;
+  background: #dff6ff;
+  border-radius: 50%;
+  font-size: 22px;
+  transition: 0.4s ease;
+}
+button:hover {
+  color: #fff;
+  background: #06283d;
+}
+.weather-box {
+  text-align: center;
+}
+
+.weather-box img {
+  width: 60%;
+  margin-top: 30px;
+}
+.weather-box .temperature {
+  position: relative;
+  color: #06283d;
+  font-size: 4rem;
+  font-weight: 800;
+  margin-top: 30px;
+  margin-left: -16px;
+}
+.weather-box .city {
+  color: #06283d;
+  font-size: 5rem;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+.weather-box .details {
+  color: #06283d;
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+.weather-details {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+.weather-details .humidity,
+.weather-details .wind {
+  display: flex;
+  align-items: center;
   justify-content: center;
-  line-height: 20px;
-  max-width: 480px;
-  min-height: 40px;
-  min-width: 0px;
-  overflow: hidden;
-  padding: 0px;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-align: center;
-  touch-action: manipulation;
-  transition:
-    background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s,
-    color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
+  gap: 5px;
+  width: 50%;
+  height: 100px;
+}
+.fadeIn {
+  animation: 0.5s fadeIn forwards;
+  animation-delay: 0.5s;
 }
 
-button:hover,
-button:focus {
-  background-color: #16437e;
-  color: #ffffff;
-}
-
-button:active {
-  background: #09223b;
-  color: rgb(255, 255, 255, 0.7);
-}
-
-button:disabled {
-  cursor: not-allowed;
-  background: rgba(0, 0, 0, 0.08);
-  color: rgba(0, 0, 0, 0.3);
-}
-
-input {
-  border-radius: 15px;
-  width: 20rem;
-  height: 2rem;
-  text-align: center;
-}
-.display {
-  box-shadow: 0px 0px 10px #a7a7f0;
-  background-color: aliceblue;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  margin: 1rem;
-  padding: 2rem 1rem;
-}
-.location {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.city,
-.temperature {
-  font-size: 3rem;
-}
-.main {
-  display: flex;
-  align-items: center;
-}
-img {
-  width: 200px;
-}
-.right {
-  margin: 2rem 0.5rem;
-  align-self: flex-start;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
+@keyframes fadeIn {
+  to {
+    scale: 1;
+    opacity: 1;
+  }
 }
