--- a/src/styles.css
+++ b/src/styles.css
@@ -15,8 +15,8 @@ body {
 .container {
   position: relative;
   width: 400px;
-  height: 605px;
-  background: #fff;
+  height: 105px;
+  background: #dff6ff;
   backdrop-filter: blur(10px);
   padding: 28px 32px;
   overflow: hidden;
@@ -64,7 +64,7 @@ button:hover {
 }
 
 .weather-box img {
-  width: 60%;
+  width: 40%;
   margin-top: 30px;
 }
 .weather-box .temperature {
